--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calcula Salario 2023</title>
+    <title>Calcular Salario 2023</title>
 
     <!-- Google Font: Source Sans Pro    -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -86,7 +86,7 @@
                         <div class="col-md-6">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h3 class="card-title">Cálcular salario</h3>
+                                    <h3 class="card-title">Calcular salario - Seleccione datos</h3>
                                 </div>
                                 <div class="card-body">
                                     <div class="form-group">
