--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
 
         <!-- Preloader -->
         <div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__shake" src="resources/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+            <img class="animation__shake" src="LogoPesos.png" alt="AdminLTELogo" height="60" width="60">
         </div>
 
         <!-- Navbar -->
@@ -50,7 +50,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="#" class="brand-link">
-                <img src="resources/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <img src="LogoPesos.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Salario 2023</span>
             </a>
 
@@ -63,6 +63,12 @@
                             <a href="index.html" class="nav-link">
                                 <i class="nav-icon far fa-circle text-danger"></i>
                                 <p class="text">Inicio</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="index3.html" class="nav-link">
+                                <i class="nav-icon far fa-circle text-success"></i>
+                                <p>Aclaración</p>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -92,7 +98,7 @@
                                     <center class="mt-4">
                                         <img src="1682634752379.jpg" class="rounded-circle" width="120" />
                                         <hr />
-                                        <h4 class="card-subtitle">Duver Gutierrez</h4>
+                                        <h4 class="card-subtitle" style="padding: 7px;">Duver Gutierrez</h4>
                                         <h6 class="card-subtitle">Analista y Desarrollador de Software</h6>
                                     </center>
                                 </div>
@@ -100,15 +106,18 @@
                                     <hr>
                                 </div>
                                 <div class="card-body">
+                                    <a class="btn btn-circle btn-secondary" href="https://wa.me/573124604321" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">WhatsApp &nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
+                                    <h6 class="text-center"></h6>
                                     <small class="text-muted">Email </small>
-                                    <h6>duvergutierrez29@gmail.com</h6> <small class="text-muted pt-4 db">Teléfono</small>
-                                    <h6>+57 312 460 4321</h6> <small class="text-muted pt-4 db">Ubicación</small>
+                                    <h6>duvergutierrez29@gmail.com</h6> 
+                                    <small class="text-muted pt-4 db">Teléfono</small>
+                                    <h6>+57 312 460 4321</h6> 
+                                    <small class="text-muted pt-4 db">Ubicación</small>
                                     <h6>Bogotá D.C, Colombia</h6>
                                     <div class="map-box">
                                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d254508.39472220035!2d-74.27262333000574!3d4.648620639894961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9bfd2da6cb29%3A0x239d635520a33914!2zQm9nb3TDoQ!5e0!3m2!1ses-419!2sco!4v1682636149250!5m2!1ses-419!2sco" width="100%" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
                                     </div>
                                     <br />
-                                    <a class="btn btn-circle btn-secondary" href="https://wa.me/573124604321" style="background: #1bd741; border-color: #1bd741; font-size: 18px; width:100%">Contáctanos&nbsp;&nbsp;<i class="fab fa-whatsapp"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -119,9 +128,10 @@
                                 
                                 <div class="tab-content" id="pills-tabContent">
                                     <div class="tab-pane fade show active" id="current-month" role="tabpanel" aria-labelledby="pills-timeline-tab">
+                                        <div class="card-header" style="background: #002f62">
+                                            <h3 class="card-title text-white">Perfil profesional</h3>
+                                        </div>
                                         <div class="card-body">
-                                            <h4 class="card-subtitle">Perfil profesional</h4>
-
                                             <p class="mt-4">
                                                 Ingeniero de sistemas, Tecnólogo en Análisis y desarrollo de sistemas de información, Tecnólogo en Telemática,
                                                 con 4 años de experiencia en el desarrollo de aplicaciones web con tecnología ASP.Net, lenguajes HTML, CSS, Javascript, SQL y C#, bases de datos SQL Server, Oracle y MySql.
