Correccion tabla descuentos retro

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label for="">Nombre decuento</label>
+                            <label for="">Nombre descuento</label>
                             <input class="form-control" id="nombreDescuento" placeholder="Ingrese nombre">
                         </div>
                         <div class="form-group">
@@ -474,7 +474,7 @@
                             <input type="number" class="form-control" id="valorDescuento"
                                 placeholder="Ingrese solo números">
                         </div>
-                        <p style="color: red;font-weight: 700;">Tenga en cuenta que a estos valores son fijos y NO les
+                        <p style="color: red;font-weight: 700;">Tenga en cuenta que estos valores son fijos y NO les
                             será aplicado el aumento</p>
                     </div>
                     <div class="modal-footer justify-content-between">
