--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             border-color: #004e01;
             box-shadow: none;
         }
+
+        .card-header {
+            background: #05b12b;
+            padding: 5px 2px 5px 12px;
+        }
+
+        .card-title {
+            margin: 0 !important;
+            font-size: 1.4rem !important;
+        }
     </style>
 </head>
 
@@ -110,8 +120,26 @@
                     <div class="row" id="contenedorDatos" style="display:block">
                         <div class="col-md-6">
                             <div class="card card-primary">
+                                <div class="card-header" style="background: #05bf2d">
+                                    <h2 class="card-title">Bienvenido</h2>
+                                </div>
+                                <div class="card-body">
+                                    <p style="text-align: justify;"><b>Información importante: </b>Desde esta herramienta usted podrá calcular el
+                                        salario 2023 dependiendo del aumento
+                                        que sea establecido por el gobierno nacional, así como visualizar el posible
+                                        retroactivo a recibir.</p>
+                                    <p style="text-align: justify;">Puede modificar el valor del porcentaje de aumento
+                                        salarial, asi como agregar otros descuentos o devengos que usted perciba.</p>
+                                    <p style="text-align: justify;">Tenga en cuenta que la
+                                        información aquí mostrada es solo de referencia, por lo cual, los valores reales
+                                        pueden variar dependiendo de cada persona y de los datos ingresados.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Calcular salario - Seleccione datos</h2>
+                                    <h2 class="card-title">Seleccione datos</h2>
                                 </div>
                                 <div class="card-body">
                                     <div class="form-group">
@@ -227,7 +255,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Posible salario con el aumento 2023</h2>
+                                    <h2 class="card-title">Posible salario 2023</h2>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
@@ -315,8 +343,7 @@
                                     <h3 class="card-title">Comparación de salarios 2022 - 2023</h3>
                                 </div>
                                 <div class="card">
-                                    <div class="card-body">
-                                        <p style="color: red;font-weight: 700; text-align: justify; display: none;" id="alertaPantalla">! Si está en un dispositivo móvil, gire la pantalla para visualizar los datos correctamente¡ </p>
+                                    <div class="card-body" style="overflow-x: auto;">
                                         <table class="table table-striped" style="border: 1px solid #b3b2b2"
                                             id="tablaDevengosComp">
                                             <thead>
@@ -336,7 +363,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-x: auto;">
                                         <table class="table table-striped" style="border: 1px solid #b3b2b2"
                                             id="tablaDescuentosComp">
                                             <thead>
@@ -354,7 +381,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-x: auto;">
                                         <table class="table table-striped" style="border: 1px solid #b3b2b2"
                                             id="tablaTotalComp">
                                             <thead>
