Ajuste alerta incremento

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                                     <h2 class="card-title">Bienvenido</h2>
                                 </div>
                                 <div class="card-body">
-                                    <p style="text-align: justify;"><b>Información importante: </b>Desde esta herramienta usted podrá calcular el
+                                    <p style="text-align: justify;"><b>Información importante: </b>Desde esta
+                                        herramienta usted podrá calcular el
                                         salario 2023 dependiendo del aumento
                                         que sea establecido por el gobierno nacional, así como visualizar el posible
                                         retroactivo a recibir.</p>
@@ -133,6 +134,9 @@
                                     <p style="text-align: justify;">Tenga en cuenta que la
                                         información aquí mostrada es solo de referencia, por lo cual, los valores reales
                                         pueden variar dependiendo de cada persona y de los datos ingresados.</p>
+                                    <p style="text-align: justify; color:red">El porcentaje de incremento salarial establecido (14.67%) se
+                                        basa en la última propuesta del gobierno nacional en la mesa negociación del
+                                        sector público. Usted puede modificarla según sea necesario.</p>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +147,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="form-group">
-                                        <label for="">Porcentaje aumento (Puede modificarlo)</label>
+                                        <label for="">Porcentaje aumento</label>
                                         <input class="form-control" id="aumento" value="14.67">
                                     </div>
                                     <div class="form-group">
