--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card card-primary">
                                 <div class="card-header" style="background: #002f62">
-                                    <h2 class="card-title">Posible Retroactivo</h2>
+                                    <h2 class="card-title">Posible Retroactivo (4 meses)</h2>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
