--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                                     <th style="width: 40%; text-align: left">Concepto</th>
                                                     <th style="width: 20%; text-align: center">2022</th>
                                                     <th style="width: 20%; text-align: center">2023</th>
-                                                    <th style="width: 20%; text-align: center">Diferencia</th>
+                                                    <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
 
                                             </thead>
@@ -378,7 +378,7 @@
                                                     <th style="width: 40%; text-align: left">Concepto</th>
                                                     <th style="width: 20%; text-align: center">2022</th>
                                                     <th style="width: 20%; text-align: center">2023</th>
-                                                    <th style="width: 20%; text-align: center">Diferencia</th>
+                                                    <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -396,7 +396,7 @@
                                                     <th style="width: 40%; text-align: left">Concepto</th>
                                                     <th style="width: 20%; text-align: center">2022</th>
                                                     <th style="width: 20%; text-align: center">2023</th>
-                                                    <th style="width: 20%; text-align: center">Diferencia</th>
+                                                    <th style="width: 20%; text-align: center">Aumento</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
