--- a/index3.html
+++ b/index3.html
@@ -130,8 +130,16 @@
                                                         Equivalente al 20% del salario básico</td>
                                                 </tr>
                                                 <tr>
+                                                    <td style="text-align: justify"><b>Prima de actividad (Oficiales): </b>
+                                                        Equivalente al 49.5% del salario básico</td>
+                                                </tr>
+                                                <tr>
                                                     <td style="text-align: justify"><b>Prima orden público (Nivel
                                                             Ejecutivo): </b> Equivalente al 15% del salario básico</td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="text-align: justify"><b>Prima orden público (Oficiales):
+                                                         </b> Equivalente al 25% del salario básico</td>
                                                 </tr>
                                                 <tr>
                                                     <td style="text-align: justify"><b>Sanidad: </b> Descuento mensual
@@ -144,7 +152,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td style="text-align: justify"><b>Ahorro obligatorio CAPROVIMPO:
-                                                        </b> Descuento mensual equivalente al 7% o 10% del salario
+                                                        </b> Descuento mensual equivalente del 7% al 10% del salario
                                                         básico</td>
                                                 </tr>
                                                 <tr>
@@ -155,7 +163,7 @@
                                                 <tr>
                                                     <td style="text-align: justify">
                                                         <b>Afiliación o aumento Caja de sueldos de retiro CASUR: </b>
-                                                        Descuento por única vez equivalente al 30% del básico del primer
+                                                        Descuento por única vez equivalente al 35% del básico del primer
                                                         salario
                                                         (nuevos PT o ST) o de 10 días del aumento de salario para los
                                                         demás uniformados aplicado en el retroactivo. Se calcula en base
