Ajuste version scripts

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Daterange picker -->
     <link rel="stylesheet" href="resources/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
-    
+
     <link rel="stylesheet" href="resources/plugins/summernote/summernote-bs4.min.css">
     <style>
         td {
@@ -146,17 +146,18 @@
                                     <h2 class="card-title">Bienvenido</h2>
                                 </div>
                                 <div class="card-body">
-                                    <h4 id="efectoBlink" style="color: #05bf2d; text-align: center;">((( Actualización 09-05-2023 )))</h4>
+                                    <h4 id="efectoBlink" style="color: #05bf2d; text-align: center;">((( Actualización
+                                        10-05-2023 )))</h4>
                                     <p style="text-align: justify;"><b>Información importante: </b>Desde esta
                                         herramienta usted podrá calcular el
-                                        salario 2023 dependiendo del aumento
-                                        que sea establecido por el gobierno nacional, así como visualizar el posible
+                                        salario 2023 según el aumento
+                                        establecido por el gobierno nacional, así como visualizar el posible
                                         retroactivo a recibir.</p>
                                     <p style="text-align: justify;">Puede modificar el valor del porcentaje de aumento
                                         salarial, asi como agregar otros descuentos o devengos que usted perciba.</p>
                                     <p style="text-align: justify;">Tenga en cuenta que la
                                         información aquí mostrada es solo de referencia, por lo cual, los valores reales
-                                        pueden variar dependiendo de cada persona y de los datos ingresados.</p>                                    
+                                        pueden variar dependiendo de cada persona y de los datos ingresados.</p>
                                 </div>
                             </div>
                         </div>
@@ -333,6 +334,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-6 col-12">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
+                                            sugerencia? &nbsp;&nbsp;</span>
+                                        <a class="btn btn-success" href="index2.html" id=""
+                                            style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row" id="contenedorSalario" style="display:none">
@@ -425,6 +438,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-8 col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna sugerencia?
+                                        &nbsp;&nbsp;</span>
+                                    <a class="btn btn-success" href="index2.html" id=""
+                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row" id="contenedorSalarioComp" style="display:none">
@@ -498,6 +521,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-10 col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna sugerencia?
+                                        &nbsp;&nbsp;</span>
+                                    <a class="btn btn-success" href="index2.html" id=""
+                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row" id="contenedorRetro" style="display:none">
@@ -565,10 +598,24 @@
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
-                    </div><!-- /.container-fluid -->
+                        <div class="col-md-8 col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
+                                        sugerencia? &nbsp;&nbsp;</span>
+                                    <a class="btn btn-success" href="index2.html" id=""
+                                        style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
             </section>
         </div>
+
+
 
         <div class="modal fade" id="modalDescuentos">
             <div class="modal-dialog">
@@ -684,7 +731,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=8"></script>
+    <script src="CalculoValores.js?v=9"></script>
 </body>
 
 </html>
