Ajuste buttons contacto

--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
                             <div class="col-md-6 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna
-                                            sugerencia? &nbsp;&nbsp;</span>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias? &nbsp;</span>
                                         <a class="btn btn-success" href="index2.html" id=""
                                             style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
                                     </div>
@@ -441,8 +440,7 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna sugerencia?
-                                        &nbsp;&nbsp;</span>
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias? &nbsp;</span>
                                     <a class="btn btn-success" href="index2.html" id=""
                                         style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
                                 </div>
@@ -524,8 +522,7 @@
                         <div class="col-md-10 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">Alguna sugerencia?
-                                        &nbsp;&nbsp;</span>
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias? &nbsp;</span>
                                     <a class="btn btn-success" href="index2.html" id=""
                                         style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
                                 </div>
