--- a/index.html
+++ b/index.html
@@ -261,6 +261,21 @@
                                             <option value="23">23 años</option>
                                             <option value="24">24 años</option>
                                             <option value="25">25 años</option>
+                                            <option value="26">26 años</option>
+                                            <option value="27">27 años</option>
+                                            <option value="28">28 años</option>
+                                            <option value="29">29 años</option>
+                                            <option value="30">30 años</option>
+                                            <option value="31">31 años</option>
+                                            <option value="32">32 años</option>
+                                            <option value="33">33 años</option>
+                                            <option value="34">34 años</option>
+                                            <option value="35">35 años</option>
+                                            <option value="36">36 años</option>
+                                            <option value="37">37 años</option>
+                                            <option value="38">38 años</option>
+                                            <option value="39">39 años</option>
+                                            <option value="40">40 años</option>
                                         </select>
                                     </div>
                                     <div class="form-group" style="display: block;" id="mostrarSelecAsisFam">
@@ -728,7 +743,7 @@
     <!-- AdminLTE App -->
     <script src="resources/dist/js/adminlte.js"></script>
     <script src="resources/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="CalculoValores.js?v=9"></script>
+    <script src="CalculoValores.js?v=10"></script>
 </body>
 
 </html>
