Ajuste alerta decreto

--- a/index.html
+++ b/index.html
@@ -146,17 +146,18 @@
                                     <h2 class="card-title">Bienvenido</h2>
                                 </div>
                                 <div class="card-body">
-                                    <h4 id="efectoBlink" style="color: #05bf2d; text-align: center;">((( Actualización
-                                        10-05-2023 )))</h4>
+                                    <h4 id="efectoBlink" style="color: #05bf2d; text-align: center;">((( Atención )))</h4>
                                     <p style="text-align: justify;"><b>Información importante: </b>Desde esta
                                         herramienta usted podrá calcular el
                                         salario 2023 según el aumento
-                                        establecido por el gobierno nacional, así como visualizar el posible
-                                        retroactivo a recibir.</p>
-                                    <p style="text-align: justify;">Puede modificar el valor del porcentaje de aumento
-                                        salarial, asi como agregar otros descuentos o devengos que usted perciba.</p>
-                                    <p style="text-align: justify;">Tenga en cuenta que la
-                                        información aquí mostrada es solo de referencia, por lo cual, los valores reales
+                                        que sea establecido por decreto por el gobierno nacional, así como visualizar el posible
+                                        retroactivo a recibir y agregar otros descuentos o devengos adicionales que usted perciba.</p>
+                                    <p style="text-align: justify; color: red;">Tenga en cuenta que este sistema es un
+                                        proyecto libre y no hace parte de ninguna entidad, por lo que la
+                                        información aquí mostrada debe ser tomada solo de referencia y ha sido extraída
+                                        de: Decreto No. 1212 de 1990, decreto 1091 de 1995,
+                                        decreto 4433 de 2004, decreto 466 de 2022, (Pediente decreto 2023). Por lo
+                                        anterior, los valores reales
                                         pueden variar dependiendo de cada persona y de los datos ingresados.</p>
                                 </div>
                             </div>
@@ -168,7 +169,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="form-group">
-                                        <label for="">Porcentaje aumento</label>
+                                        <label for="">Posible porcentaje de aumento</label>
                                         <input class="form-control" id="aumento" value="14.62">
                                     </div>
                                     <div class="form-group">
@@ -338,7 +339,8 @@
                             <div class="col-md-6 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias? &nbsp;</span>
+                                        <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
+                                            &nbsp;</span>
                                         <a class="btn btn-success" href="index2.html" id=""
                                             style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
                                     </div>
@@ -440,7 +442,8 @@
                         <div class="col-md-8 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias? &nbsp;</span>
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
+                                        &nbsp;</span>
                                     <a class="btn btn-success" href="index2.html" id=""
                                         style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
                                 </div>
@@ -522,7 +525,8 @@
                         <div class="col-md-10 col-12">
                             <div class="card">
                                 <div class="card-body">
-                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias? &nbsp;</span>
+                                    <span style="font-size: 24px;color: #3348fd;font-weight: 500;">¿Sugerencias?
+                                        &nbsp;</span>
                                     <a class="btn btn-success" href="index2.html" id=""
                                         style="padding: 0px 13px 0px 13px; font-size: 21px;">Contáctenos</a>
                                 </div>
@@ -595,7 +599,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                         <div class="col-md-8 col-12">
                             <div class="card">
